# avato-python-client-tflite-dynamic

./: README.md  compile_proto.sh  noxfile.py  pyproject.toml  requirements.txt  setup.py  shell.nix
avato_tflite_dynamic/: __init__.py  endpoints.py  instance.py
avato_tflite_dynamic/proto/: tflite_dynamic_pb2.py
examples/: README.md  requirements.txt  tflite_demo_inference_user.ipynb  tflite_demo_model_owner.ipynb
examples/data/: MNIST.fb
examples/data/MNIST_Model_TF/: saved_model.pb
examples/data/MNIST_Model_TF/variables/: variables.data-00000-of-00001  variables.index
proto/: tflite_dynamic.proto
tests/: test_complete.py
tests/fixtures/: cifar10-model.fb
