[tool.poetry]
name = "avato-tflite-dynamic"
version = "0.3.0"
description = "Python client library for the TFLite dynamic instance of the avato platform"
authors = ["decentriq <opensource@decentriq.ch>"]
readme = 'README.md'
repository = "https://github.com/decentriq/avato-python-client-tflite-dynamic"
homepage = "https://github.com/decentriq/avato-python-client-tflite-dynamic"

[tool.poetry.dependencies]
python = "^3.6"
avato = "^0.5.2"
numpy = "~1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
